--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -883,16 +883,20 @@ img {
 *  About Left
 -----------------------------------------*/
 .about-left h2 {
-  font-size: 24px;
-  font-weight: 700;
-  color: #111;
-  margin: 0 0 15px;
+  margin: 0 0 25px;
+  font-weight: 600;
+  font-size: 35px;
+  display: inline-block;
+  z-index: 1;
+  color: #151515;
+  text-align: center;
 }
 .about-left h3 {
     font-size: 16px;
     font-weight: 600;
     color: #222;
     margin: 0 0 25px;
+    text-align: center;
 }
 
 .about-left p {
